<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/history"/>

    <item
        android:id="@+id/nav_report"
        android:icon="@drawable/ic_baseline_report_24"
        android:title="@string/reports"/>

    <item
        android:id="@+id/nav_refueling"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/refueling"/>

    <item
        android:id="@+id/nav_reminder"
        android:icon="@drawable/ic_baseline_timer_24"
        android:title="@string/reminders"/>

    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_baseline_more_horiz_24"
        android:title="@string/more"/>

</menu>